--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Lobo - Desenvolvedor e Designer</title>
   <link rel="stylesheet" href="./css/style.css">
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
       <h1>Desenvolvedor <br>
         Front End & <br>
         UX/UI Designer</h1>
-      <p>Localizado no Rio de Janeiro </p>
+      <p>Localizado no Rio de Janeiro 🏖</p>
     </div>
   </main>
   <section aria-label="Experiencia" class="experiencia" id="experiencia">
